feat: created new endpoint to search city by codigo_tom + added search for state and cities for states by state codigo_ibge + improve ci
